--- a/app/src/res/layout/activity_setup.ui
+++ b/app/src/res/layout/activity_setup.ui
@@ -193,7 +193,11 @@ QPushButton:pressed {
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QTabWidget::pane { /* The tab widget frame */
+    <string notr="true">QTabWidget {
+    colore: rgb(255, 255, 255);
+}
+
+QTabWidget::pane { /* The tab widget frame */
     border-top: 2px solid #C2C7CB;
 }
 
@@ -204,21 +208,18 @@ QTabWidget::tab-bar {
 /* Style the tab using the tab sub-control. Note that
     it reads QTabBar _not_ QTabWidget */
 QTabBar::tab {
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
-                                stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+    colore: rgb(255, 255, 255);
+    background: rgb(123, 123, 123);
     border: 2px solid #C4C4C3;
     border-bottom-color: #C2C7CB; /* same as the pane color */
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    min-width: 8ex;
-    padding: 2px;
+    min-width: 10ex;
+    padding: 3px;
 }
 
 QTabBar::tab:selected, QTabBar::tab:hover {
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                stop: 0 #fafafa, stop: 0.4 #f4f4f4,
-                                stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
+    background: rgb(148, 147, 147);
 }
 
 QTabBar::tab:selected {
