Removed unused coloer attruibute

--- a/app/src/res/layout/activity_setup.ui
+++ b/app/src/res/layout/activity_setup.ui
@@ -193,11 +193,7 @@ QPushButton:pressed {
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QTabWidget {
-    colore: rgb(255, 255, 255);
-}
-
-QTabWidget::pane { /* The tab widget frame */
+    <string notr="true">QTabWidget::pane { /* The tab widget frame */
     border-top: 2px solid #C2C7CB;
 }
 
